--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 }
 
 .cta-buttons {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .join-button {
@@ -50,7 +50,7 @@ h1 {
   font-size: 1em;
   border-radius: 40px;
   text-decoration: none;
-  margin-top: 20px;
+  font-weight: bold;
 }
 
 .telegram-icon {
